# Agentic-Research-Assistant

./: .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DOCS.md  LICENSE  QUICKSTART.md  README.md  app.py  main.py  pyproject.toml  requirements.txt  run_crew.py  verify_setup.py
src/: agents.py  tasks.py  tools.py
